<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BasicParentLayout"
    android:id="@+id/fragment_login"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
...
                android:id="@+id/login_email"
                android:hint="@string/email_address">

                <EditText
                    tools:ignore="LabelFor"
                    style="@style/EditTextStyle"
                    android:id="@+id/login_email_et"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
...
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">

                <EditText
                    tools:ignore="LabelFor"
                    style="@style/EditTextStyle"
                    android:id="@+id/login_password_et"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textColor="@color/divider_grey"
                android:fontFamily="sans-serif"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/divider_grey"
                android:fontFamily="sans-serif"
                android:layout_gravity="center"
...
            android:orientation="horizontal"
            android:layout_above="@+id/bottom"
            android:layout_centerHorizontal="true"
            android:padding="10dp">

            <Button
                android:id="@+id/skip_login_button"
                android:layout_weight="1"
                style="@style/SideBySideButtonOrange"
                android:layout_width="0dp"
                android:text="@string/skip_login"
                android:layout_marginStart="5dp"/>

...
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_top_border"
            android:padding="10dp">

            <Button
                android:id="@+id/login_button"
                android:layout_weight="1"
                style="@style/SideBySideButtonWhite"
                android:layout_width="0dp"
                android:text="@string/login"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </RelativeLayout>

...
