<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BasicParentLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/program_link"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="5dp">

                    <TextView
                        style="@style/HomeScreenItemTextView"
                        android:background="@color/blue"
                        android:text="@string/conference_program"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/subscribed_link"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="5dp">

                    <TextView
                        style="@style/HomeScreenItemTextView"
                        android:background="@color/yellow"
                        android:text="@string/subscribed_events"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/gallery_link"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="5dp">

                    <TextView
                        style="@style/HomeScreenItemTextView"
                        android:background="@color/violet"
                        android:text="@string/gallery"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/venue_link"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="5dp">

                    <TextView
                        style="@style/HomeScreenItemTextView"
                        android:background="@color/green"
                        android:text="@string/venue"/>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            style="@style/ProgressBar"/>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        app:headerLayout="@layout/menu_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start"/>
</android.support.v4.widget.DrawerLayout>
